--- a/index.html
+++ b/index.html
@@ -38,34 +38,34 @@
                         <p class='lead ld-lead'>
                             Segera tinggalkan laman ini apabila Anda tidak mempunyai komitmen untuk membina hubungan yang serius.
                         </p>
-                        <p>Setiap hari ratusan member kami berhasil menemukan pasangan dan melangkah ke tahap hubungan yang lebih lanjut.
+                        <p>Setiap hari ratusan member berhasil menemukan pasangan dan melangkah ke tahap hubungan yang lebih lanjut.
                         </p>
-                        <p>Dengan menggunakan metode pencocokan yang unik dan pemahaman akan kultur
-                            <strong>Indonesia</strong>, kami berhasil membantu jutaan anggota menemukan pasangan ideal setiap tahunya.</p>
+                        <p>Menggunakan metode pencocokan yang unik dan pemahaman akan kultur
+                            <strong>Indonesia</strong>, kami berhasil membantu jutaan anggota menemukan pasangan ideal..</p>
                     </div>
                 </div>
 
                 <div class="row">
                     <p style="margin-bottom:1rem">Sebelum kami mengizinkan anda untuk mengetahui
-                        <strong>siapa kami</strong>, jawablah 3 pertanyaan singkat berikut.</p>
+                        <strong>siapa kami</strong>, jawablah 4 pertanyaan singkat berikut.</p>
                     <div class="survey well">
                         <div class="q1 oswald">
                             <p>
-                                Apakah anda berusia setidaknya 18 tahun?
+                                Apakah anda mempunyai komitmen untuk membina hubungan serius?
                             </p>
                             <buton class="btn btn-success click-1">Ya</buton>
                             <buton class="btn btn-danger click-1">Tidak</buton>
                         </div>
                         <div class="q2 oswald" style="display:none">
                             <p>
-                                Apakah anda mempunyai komitmen untuk membina hubungan serius?
+                                Apakah anda tertarik untuk berkenalan dengan anggota yang berdomisili di kota yang sama dengan anda?
                             </p>
                             <buton class="btn btn-success click-2">Ya</buton>
                             <buton class="btn btn-danger click-2">Tidak</buton>
                         </div>
                         <div class="q3 oswald" style="display:none">
                             <p>
-                                Apakah anda tertarik untuk berkenalan dengan anggota yang berdomisili di kota yang sama dengan anda?
+                                Apakah anda berkeberatan apabila member lain memulai percakapan dengan anda?
                             </p>
                             <buton class="btn btn-success click-3">Ya</buton>
                             <buton class="btn btn-danger click-3">Tidak</buton>
