--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     });
 
     $('.register').click(function() {
-        window.location.href = "http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=prime";
+        window.location.href = "http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=prime1";
         return false;
     });
     </script>
