--- a/tmlk/lpd/index.html
+++ b/tmlk/lpd/index.html
@@ -23,9 +23,9 @@
 
         <div class="row" style="margin-top:0.8em">
             <div class="col-md-12 ld-header">
-                <h1 class="center-text text-center red">Apapun Fantasi Mu Semua Ada Di Sini
+                <h1 class="center-text text-center red">Bukan Wanita Penghibur Profesional
                     <br>
-                    <small>Wanita - Wanita Ini Benar Benar Membutuhkan Hubungan Serius</small>
+                    <small>Wanita - Wanita Ini Benar Benar Membutuhkan Kehangatan Lelaki</small>
                 </h1>
                 <hr>
             </div>
@@ -47,9 +47,9 @@
 
                     <ul>
                         <li>Berusia sekurang - kurangya 18 tahun</li>
-                        <li>Mampu Menjaga Privasi Partner </li>
                         <li>Bersedia untuk tidak menyebarkan foto maupun video partner</li>
                         <li>Bersedia berperilaku aman selama berhubungan dengan partner</li>
+                        <li>Wajib mengunakan kondom </li>
                     </ul>
 
                     <div class="text-center" style="margin-top:4em"><button class="btn btn-danger btn-block btn-lg">DAFTAR</button></div>
