--- a/tmlk/lpd/index.html
+++ b/tmlk/lpd/index.html
@@ -52,7 +52,8 @@
                         <li>Wajib mengunakan kondom </li>
                     </ul>
 
-                    <div class="text-center" style="margin-top:4em"><button class="btn btn-danger btn-block btn-lg">DAFTAR</button></div>
+                    <div class="text-center" style="margin-top:4em"><a href="http://tracker.com-ads.co/click" class="btn btn-danger btn-block btn-lg">DAFTAR</a>
+                    </div>
                 </div>
 
             </div>
