--- a/tmlk/lp1/index.html
+++ b/tmlk/lp1/index.html
@@ -84,7 +84,7 @@
     <script src="jquery.backgroundpos.min.js"></script>
     <script>
         $('.convert').click(function() {
-          window.location.href = 'http://tracker.com-ads.co/click';
+          window.location.href = 'http://zi7d1.trackvoluum.com/click';
           return false;
         });
 
