--- a/tmlk/lpd/index.html
+++ b/tmlk/lpd/index.html
@@ -52,7 +52,7 @@
                         <li>Wajib mengunakan kondom </li>
                     </ul>
 
-                    <div class="text-center" style="margin-top:4em"><a href="http://tracker.com-ads.co/click" class="btn btn-danger btn-block btn-lg">DAFTAR</a>
+                    <div class="text-center" style="margin-top:4em"><a href="http://zi7d1.trackvoluum.com/click" class="btn btn-danger btn-block btn-lg">DAFTAR</a>
                     </div>
                 </div>
 
