--- a/bng/index.html
+++ b/bng/index.html
@@ -84,7 +84,7 @@
     <script src="jquery.backgroundpos.min.js"></script>
     <script>
         $('.convert').click(function() {
-          window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=prime';
+          window.location.href = 'http://www.mb103.com/lnk.asp?o=6944&c=918271&a=154558&s1=bng';
           return false;
         });
 
